Logiciel/STM/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:55:13 **** Incremental Build of configuration Debug for project STM ****
make -j6 all 
arm-none-eabi-gcc "../Core/Src/I2C.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/I2C.d" -MT"Core/Src/I2C.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/I2C.o"
../Core/Src/I2C.c: In function 'Lire_I2C':
../Core/Src/I2C.c:22:29: error: 'hi2cl' undeclared (first use in this function); did you mean 'hi2c1'?
   22 |     HAL_I2C_Master_Receive(&hi2cl, 0x14 << 1, &data, 1, 100);
      |                             ^~~~~
      |                             hi2c1
../Core/Src/I2C.c:22:29: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:55: Core/Src/I2C.o] Error 1
"make -j6 all" terminated with exit code 2. Build might be incomplete.
